fixing img source

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <button class="btn">Get Started</button>
       </div>
       <div class="image">
-        <img src="/img/hero-img.png">
+        <img src="img/hero-img.png">
       </div>
     </header>
 
